# strongtypes

./: .gitignore  CMakeLists.txt  README.md  StrongTypesTargetsConfig.cmake.in
include/: strong_types.h
include/agu/: strong_types.h
test/: CMakeLists.txt  numeric_operations_test.cpp  strong_types_test.cpp
